--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ section {
     background-position: center;
     position: relative;
 }
+/* HERO STYLES END */
 
 .hero-form {
     border: 3px solid #024e76;
@@ -119,7 +120,6 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
-/* HERO STYLES END */
 
 .intro {
     text-align: center;
@@ -225,3 +225,46 @@ section {
     font-size: 17px;
     line-height: 1.3;
 }
+
+/* REACH OUT STYLES START */
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color:#fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white
+}
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p,
+.contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138
+}
+
+/* REACH OUT STYLES END */
