--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,17 +218,18 @@ section {
 step-img img {
     max-width: 100%;;
 }
-
 .trainers {
-
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
-
 .trainer {
-    width: 900px;
     margin: 0 auto 30px auto;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
+    flex: 1;
 }
 
 .trainer img {
@@ -240,6 +241,7 @@ step-img img {
     padding: 35px;
     float: left;
     width: 65%;
+    line-height: 1.3;
 }
 
 .text-left {
@@ -251,19 +253,17 @@ step-img img {
 }
 
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
 
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
 
 /* REACH OUT STYLES START */
