--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw;
 }
+
 footer {
     background: #fce138;
     width: 100%;
@@ -83,7 +84,6 @@ section {
     justify-content: center;
     flex-wrap: wrap;
 }
-/* HERO STYLES END */
 
 .hero-cta {
     width: 35%;
@@ -218,6 +218,7 @@ section {
 step-img img {
     max-width: 100%;;
 }
+
 .trainers {
     width: 100%;
     margin: 0 auto;
@@ -225,31 +226,21 @@ step-img img {
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
 .trainer {
-    margin: 0 auto 30px auto;
+    margin: 20px;
     background: #024e76;
     color: #fce138;
     flex: 1;
 }
 
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
 }
 
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
     line-height: 1.3;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
 }
 
 .trainer-bio h3 {
@@ -312,7 +303,7 @@ step-img img {
 }
 
 .contact-form button {
-    width: 10%;
+    width: 100%;
     border: none;
     background: #fce138;
     color: #024e76;
@@ -336,4 +327,12 @@ step-img img {
 
 .flex-row {
     display: flex;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-align {
+    text-align: right;
 }
